@@ -10,12 +10,12 @@ module Git.CheckAttr where
 import Common
 import Git
 import Git.Command
-import qualified Git.BuildVersion
+import qualified Git.Version
 import qualified Utility.CoProcess as CoProcess
 
 import System.IO.Error
 
-type CheckAttrHandle = (CoProcess.CoProcessHandle, [Attr], String)
+type CheckAttrHandle = (CoProcess.CoProcessHandle, [Attr], Bool, String)
 
 type Attr = String
 
@@ -25,7 +25,8 @@ checkAttrStart :: [Attr] -> Repo -> IO CheckAttrHandle
 checkAttrStart attrs repo = do
 	currdir <- getCurrentDirectory
 	h <- CoProcess.rawMode =<< gitCoProcessStart True params repo
-	return (h, attrs, currdir)
+	oldgit <- Git.Version.older "1.7.7"
+	return (h, attrs, oldgit, currdir)
   where
 	params =
 		[ Param "check-attr" 
@@ -34,11 +35,11 @@ checkAttrStart attrs repo = do
 		[ Param "--" ]
 
 checkAttrStop :: CheckAttrHandle -> IO ()
-checkAttrStop (h, _, _) = CoProcess.stop h
+checkAttrStop (h, _, _, _) = CoProcess.stop h
 
 {- Gets an attribute of a file. -}
 checkAttr :: CheckAttrHandle -> Attr -> FilePath -> IO String
-checkAttr (h, attrs, currdir) want file = do
+checkAttr (h, attrs, oldgit, currdir) want file = do
 	pairs <- CoProcess.query h send (receive "")
 	let vals = map snd $ filter (\(attr, _) -> attr == want) pairs
 	case vals of
@@ -81,7 +82,6 @@ checkAttr (h, attrs, currdir) want file = do
 	 - With newer git, git check-attr chokes on some absolute
 	 - filenames, and the bugs that necessitated them were fixed,
 	 - so use relative filenames. -}
-	oldgit = Git.BuildVersion.older "1.7.7"
 	file'
 		| oldgit = absPathFrom currdir file
 		| otherwise = relPathDirToFile currdir $ absPathFrom currdir file
