@@ -9,6 +9,9 @@ git-annex (5.20141232) UNRELEASED; urgency=medium
   * Android: Provide a version built with -fPIE -pie to support Android 5.0.
   * sync: Fix an edge case where syncing in a bare repository would try to
     merge and so fail.
+  * Check git version at runtime, rather than assuming it will be the same
+    as the git version used at build time when running git-checkattr and
+    git-branch remove.
 
  -- Joey Hess <id@joeyh.name>  Fri, 02 Jan 2015 13:35:13 -0400
 
